--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BaseAndroidApplication</string>
+    <string name="Play">Play</string>
+    <string name="Pause">Pause</string>
+    <string name="Stop">Stop</string>
 </resources>
